# BNN-EDL

./: .gitignore  README.md  experiments.yaml  pyproject.toml  requirements.txt  run_experiments.py  train.py  verify_evaluation.ipynb  verify_evaluation.py
configs/: cifar10_mlp.yaml  cifar10_resnet20.yaml  cifar10_resnet20_bnn_sgld.yaml  cifar10_resnet20_bnn_sgld_T_0.001.yaml  cifar10_resnet20_bnn_sgld_T_0.01.yaml  cifar10_resnet20_bnn_sgld_T_0.1.yaml  cifar10_resnet20_bnn_sgld_T_1.yaml  cifar10_resnet20_bnn_sgld_T_1_no_augmentation.yaml  cifar10_resnet20_bnn_sgld_lr_0.0001.yaml  cifar10_resnet20_categorical_bnn_sgld.yaml  cifar10_resnet20_categorical_bnn_sgld_3072_batch.yaml  cifar10_resnet20_categorical_bnn_sgld_4096_batch.yaml  cifar10_resnet20_categorical_bnn_sgld_no_augmentation.yaml  cifar10_resnet20_dirichlet_bnn.yaml  cifar10_resnet20_dirichlet_bnn_sgld.yaml  cifar10_resnet20_dirichlet_bnn_sgld_T_0.01.yaml  cifar10_resnet20_dirichlet_bnn_sgld_gamma_priorfs_concentration_1.0_rate_0.1.yaml  cifar10_resnet20_dirichlet_bnn_sgld_gamma_priorfs_concentration_1.0_rate_0.1_T_0.01.yaml  cifar10_resnet20_dirichlet_bnn_sgld_gamma_priorfs_concentration_2.0_rate_0.1.yaml  cifar10_resnet20_dirichlet_bnn_sgld_gamma_priorfs_concentration_400.0_rate_2.0.yaml  cifar10_resnet20_dirichlet_bnn_sgld_gamma_priorfs_concentration_400.0_rate_2.0_lr_0.0001.yaml  cifar10_resnet20_dirichlet_bnn_sgld_gamma_priorfs_concentration_400.0_rate_2.0_priorfs_annealing.yaml  cifar10_resnet20_dirichlet_bnn_sgld_gamma_priorfs_concentration_5.0_rate_0.033.yaml  cifar10_resnet20_dirichlet_bnn_sgld_gamma_priorfs_concentration_5.0_rate_0.033_lr_0.0001.yaml  cifar10_resnet20_dirichlet_bnn_sgld_lr_0.0001.yaml  cifar10_resnet20_dirichlet_bnn_sglrw.yaml  cifar10_resnet20_no_augmentation.yaml  (+19 more)
(+252 files in other folders)
