[tool.poetry]
name = "bnn-edl"
version = "0.1.0"
description = "Bayesian Neural Networks with Evidential Deep Learning"
authors = ["John-Pierre Weideman <johnpierrew@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.10"
torch = ">=2.0.0"
torchvision = ">=0.15.0"
posteriors = ">=0.1.0"
numpy = ">=1.20.0"
matplotlib = ">=3.5.0"
seaborn = ">=0.11.0"
scikit-learn = ">=1.0.0"
jupyter = ">=1.0.0"
tqdm = ">=4.60.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


